fix toggle alignment in contact module

--- a/src/components/playbook-elements/radio-control-wrapper/radio-control-wrapper.module.css
+++ b/src/components/playbook-elements/radio-control-wrapper/radio-control-wrapper.module.css
@@ -6,6 +6,7 @@
   overflow: clip;
   position: relative;
   border: none;
+  align-items: center;
 
   &:has(.toggleZero:focus-visible) {
     outline: 3px solid var(--highlight);
